# IntelliBot

./: .gitignore  .replit  AGENTS.md  README.md  actions.py  agent_storage.py  app.py  bot_manager.py  config.json  database_migration.py  models.py  openai_service.py  pyproject.toml  replit.md  requirements.txt  retrieval_engine.py  test_flow.py
attached_assets/: Pasted-Awesome-your-setup-is-perfect-for-adding-a-website-grounded-answer-only-from-aihub-org-za-brain-B-1759927862488_1759927862488.txt
bots_starter/: config.yml
bots_starter/.rasa/cache/tmp4kzzox51/: unexpected_intent_policy.label_quantiles.pkl  unexpected_intent_policy.tf_model.data-00000-of-00001  unexpected_intent_policy.tf_model.index
bots_starter/.rasa/cache/tmp8fomba1f/: ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
bots_starter/.rasa/cache/tmpi_5q7asx/: DIETClassifier.tf_model.index
kb/index/: embeddings.npy  faiss.index  meta.json
kb/officems/: config.json
kb/raw/: 5c45670ced5f5c58.json  9dfe330729ecfb04.json  a57fb964ca201711.json  a9d3565fdaf02d3f.json
scripts/: container-dev.sh  rasa_respond.py  setup_intellibot_lxc.sh
static/css/: style.css
static/js/: app.js
templates/: index.html
tools/: crawl_site.py  detect_intents.py  index_kb.py  process_docs.py  profile_builder.py  rasa_builder.py
