[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "faiss-cpu",
    "flask",
    "flask-cors",
    "flask-socketio",
    "flask-sqlalchemy",
    "numpy",
    "openai",
    "psycopg2-binary",
    "pypdf2",
    "pyyaml",
    "requests",
    "torch>=2.0.0",
    "transformers>=4.34.0",
    "sentence-transformers>=3.0.0",
    "sqlalchemy",
    "trafilatura",
]
