[project]
name = "intellibot"
version = "0.1.0"
description = "Hybrid AI chatbot combining GPT-4o-mini with vector retrieval for knowledge-grounded responses"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "eventlet>=0.40.3",
    "flask",
    "flask-cors",
    "flask-socketio",
    "flask-sqlalchemy",
    "gunicorn>=23.0.0",
    "numpy",
    "openai",
    "pypdf2",
    "pyyaml",
    "requests",
    "sqlalchemy",
    "trafilatura",
]
